--- a/APP/Client/hospital-appointment/public/index.html
+++ b/APP/Client/hospital-appointment/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Start of Reo Javascript -->
+    <script type="text/javascript">
+      !function(){var e,t,n;e="a9505926280f383",t=function(){Reo.init({clientID:"a9505926280f383"})},(n=document.createElement("script")).src="https://static.reo.dev/"+e+"/reo.js",n.defer=!0,n.onload=t,document.head.appendChild(n)}();
+    </script>
+    <!-- End of Reo Javascript -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
